Fix alignment issue in mobile view

--- a/src/index.sass
+++ b/src/index.sass
@@ -149,7 +149,7 @@ $screen-md-min: 768px
   display: flex
   @include md-max
     flex-direction: column
-  align-items: center
+  // align-items: center
   margin-bottom: 48px
 
 .Recipe-title
